istio/reviews.yaml
# Reviews service

apiVersion: v1
kind: Service
metadata:
  name: reviews
  labels:
    app: reviews
    service: reviews
spec:
  ports:
  - port: 9080
    name: http
  selector:
    app: reviews

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews
  labels:
    app: reviews
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v1
  template:
    metadata:
      labels:
        app: reviews
        version: v1
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
      - name: reviews
        image: docker.io/istio/examples-bookinfo-reviews-v2:1.16.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9080
        volumeMounts:
        - name: tmp
          mountPath: /tmp
        - name: wlp-output
          mountPath: /opt/ibm/wlp/output
        securityContext:
          runAsUser: 1000
      volumes:
      - name: wlp-output
        emptyDir: {}
      - name: tmp
        emptyDir: {}

---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: reviews-v2
#   labels:
#     app: reviews
#     version: v2
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: reviews
#       version: v2
#   template:
#     metadata:
#       labels:
#         app: reviews
#         version: v2
#     spec:
#       serviceAccountName: bookinfo-reviews
#       containers:
#       - name: reviews
#         image: docker.io/istio/examples-bookinfo-reviews-v2:1.16.2
#         imagePullPolicy: IfNotPresent
#         env:
#         - name: LOG_DIR
#           value: "/tmp/logs"
#         ports:
#         - containerPort: 9080
#         volumeMounts:
#         - name: tmp
#           mountPath: /tmp
#         - name: wlp-output
#           mountPath: /opt/ibm/wlp/output
#         securityContext:
#           runAsUser: 1000
#       volumes:
#       - name: wlp-output
#         emptyDir: {}
#       - name: tmp
#         emptyDir: {}

# ---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: reviews-v3
#   labels:
#     app: reviews
#     version: v3
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: reviews
#       version: v3
#   template:
#     metadata:
#       labels:
#         app: reviews
#         version: v3
#     spec:
#       serviceAccountName: bookinfo-reviews
#       containers:
#       - name: reviews
#         image: docker.io/istio/examples-bookinfo-reviews-v3:1.16.2
#         imagePullPolicy: IfNotPresent
#         env:
#         - name: LOG_DIR
#           value: "/tmp/logs"
#         ports:
#         - containerPort: 9080
#         volumeMounts:
#         - name: tmp
#           mountPath: /tmp
#         - name: wlp-output
#           mountPath: /opt/ibm/wlp/output
#         securityContext:
#           runAsUser: 1000
#       volumes:
#       - name: wlp-output
#         emptyDir: {}
#       - name: tmp
#         emptyDir: {}
