istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: flaskapp-gateway
  namespace: canary-test
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
    
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-app-two
  namespace: canary-test
spec:
  hosts:
  - "*"
  gateways:
  - flaskapp-gateway
  http:
    - route:
      - destination:
          host: flask-app
          port:
            number: 80
